--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
+    <!-- Galeria de fotos -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
@@ -231,8 +232,8 @@
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="titulo-timeline mb-2">Primera cita oficial</h4>
-                            <h5 class="fecha-timeline text-uppercase mb-2">Diciembre de 2017</h5>
-                            <h6 class=" descripcion-timeline m-0">Descripción año 1<br> rataaaa</h6>
+                            <!--<h5 class="fecha-timeline mb-2">Diciembre de 2017</h5>-->
+                            <h6 class=" descripcion-timeline m-0">Una tarde de diciembre de 2017 quedó inmortalizada nuestra primera foto como pareja</h6>
                         </div>
                     </div>
                 </div>
@@ -455,7 +456,7 @@
                                 </div>
 
                                 <div class="col-sm-6">
-                                    <select class="form-control bg-secondary border-0" style="height: 50px; padding-top: 0.375rem;" required="required">
+                                    <select name="menu" class="form-control bg-secondary border-0" style="height: 50px; padding-top: 0.375rem;" required="required">
                                         <option value="" disabled selected hidden>¿Qué menú te gustaría tomar?</option>
                                         <option>Quiero menú estándar</option>
                                         <option>Quiero menú vegano</option>
@@ -464,7 +465,7 @@
                                 </div>
 
                                 <div class="form-group col-sm-6">
-                                    <select class="form-control bg-secondary border-0" style="height: 50px;" required="required">
+                                    <select name="bus" class="form-control bg-secondary border-0" style="height: 50px;" required="required">
                                         <option value="" disabled selected hidden>¿Irías en autobús a la hacienda?</option>
                                         <option>Si</option>
                                         <option>No, prefiero por mi cuenta</option>
