--- a/return.html
+++ b/return.html
@@ -7,7 +7,7 @@
   <meta content = "width=device-width, initial-scale=1.0" name = "viewport">
     
   <!-- Icon --> <!-- FIXME -->
-  <link href = "img/icon.ico" rel = "icon">
+  <link href = "img/ico/icon.ico" rel = "icon">
 
   <!-- Google Web Fonts -->
   <link rel = "preconnect" href = "https://fonts.gstatic.com">
