--- a/index.html
+++ b/index.html
@@ -58,77 +58,9 @@
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 pb-5" id="home">
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel1.jpg" style="object-fit: cover;" height="800" width="1366">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Manu & Mayka</h1>
-                            <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">Os invitamos a nuestra boda</h3>
-                            </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/lAIGb1lfpBw" data-target="#videoModal">
-                                <span></span>
-                            </button>
-
-                            <div id="countdown-container1">
-                                <div class="circle" id="days_circle1"></div>
-                                <div class="circle" id="hours_circle1"></div>
-                                <div class="circle" id="minutes_circle1"></div>
-                                <div class="circle" id="seconds_circle1"></div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel2.jpg" style="object-fit: cover;" height="800" width="1366">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Manu & Mayka</h1>
-                            <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">En efecto, Hablamos de:</h3>
-                            </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/lAIGb1lfpBw" data-target="#videoModal">
-                                <span></span>
-                            </button>
-
-                            <div id="countdown-container2">
-                                <div class="circle" id="days_circle2"></div>
-                                <div class="circle" id="hours_circle2"></div>
-                                <div class="circle" id="minutes_circle2"></div>
-                                <div class="circle" id="seconds_circle2"></div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel3.jpg" style="object-fit: cover;" height="800" width="1366">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Manu & Mayka</h1>
-                            <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">La boda de MariManu</h3>
-                            </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/lAIGb1lfpBw" data-target="#videoModal">
-                                <span></span>
-                            </button>
-
-                            <div id="countdown-container3">
-                                <div class="circle" id="days_circle3"></div>
-                                <div class="circle" id="hours_circle3"></div>
-                                <div class="circle" id="minutes_circle3"></div>
-                                <div class="circle" id="seconds_circle3"></div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="carousel-inner" id="carousel-items"></div>
+            
+            <!-- Controles del carrusel -->
             <a class="carousel-control-prev justify-content-start" href="#header-carousel" data-slide="prev">
                 <div class="btn btn-primary px-0" style="width: 68px; height: 68px;">
                     <span class="carousel-control-prev-icon mt-3"></span>
@@ -140,8 +72,10 @@
                 </div>
             </a>
         </div>
+        
+        <script src="js/carousel.js"></script>
     </div>
-    <!-- Carousel End -->
+    <!-- Carousel End -->    
 
     <!-- Video Modal Start -->
     <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -188,12 +122,12 @@
                     </div>
                 </div>
                 <div class="col-md-6 p-0" style="min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/novio1.jpg" style="object-fit: cover;" height="500" width="600">
+                    <img class="position-absolute w-100 h-100" src="img/nosotros/novio1.jpg" style="object-fit: cover;" height="500" width="600">
                 </div>
             </div>
             <div class="row m-0">
                 <div class="col-md-6 p-0" style="min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/novia1.jpg" style="object-fit: cover;" height="500" width="600">
+                    <img class="position-absolute w-100 h-100" src="img/nosotros/novia1.jpg" style="object-fit: cover;" height="500" width="600">
                 </div>
                 <div class="col-md-6 p-0 text-center text-md-left">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
@@ -231,7 +165,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 p-0" style="min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/historia3.jpg" style="object-fit: cover;" height="500" width="600">
+                    <img class="position-absolute w-100 h-100" src="img/nosotros/historia3.jpg" style="object-fit: cover;" height="500" width="600">
                 </div>
             </div>
         </div>
@@ -249,7 +183,7 @@
             <div class="container timeline position-relative p-0">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/historia1.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid mr-md-3" src="img/historia/historia1.jpg" alt="", heigth="300" width="300">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
@@ -268,12 +202,12 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/historia2.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid ml-md-3" src="img/historia/historia2.jpg" alt="", heigth="300" width="300">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/historia3.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid mr-md-3" src="img/historia/historia3.jpg" alt="", heigth="300" width="300">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
@@ -292,12 +226,12 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/historia2.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid ml-md-3" src="img/historia/historia2.jpg" alt="", heigth="300" width="300">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/historia3.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid mr-md-3" src="img/historia/historia3.jpg" alt="", heigth="300" width="300">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
@@ -316,7 +250,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/historia2.jpg" alt="", heigth="300" width="300">
+                        <img class="img-fluid ml-md-3" src="img/historia/historia2.jpg" alt="", heigth="300" width="300">
                     </div>
                 </div>
             </div>
@@ -338,56 +272,56 @@
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria1.jpg" alt="" height="400" width="400">
-                <a href="img/galeria1.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria1.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria1.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria2.jpg" alt="" height="400" width="400">
-                <a href="img/galeria2.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria2.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria2.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria3.jpg" alt="" height="400" width="400">
-                <a href="img/galeria3.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria3.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria3.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria4.jpg" alt="" height="400" width="400">
-                <a href="img/galeria4.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria4.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria4.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria5.jpg" alt="" height="400" width="400">
-                <a href="img/galeria5.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria5.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria5.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria6.jpg" alt="" height="400" width="400">
-                <a href="img/galeria6.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria6.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria6.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria7.jpg" alt="" height="400" width="400">
-                <a href="img/galeria7.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria7.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria7.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria8.jpg" alt="" height="400" width="400">
-                <a href="img/galeria8.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria8.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria8.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/galeria9.jpg" alt="" height="400" width="400">
-                <a href="img/galeria9.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria/galeria9.jpg" alt="" height="400" width="400">
+                <a href="img/galeria/galeria9.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
@@ -411,7 +345,7 @@
             <div class="row">
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
-                        <img class="img-fluid mb-4" src="img/evento1.jpg" alt="" height="300" width="300">
+                        <img class="img-fluid mb-4" src="img/evento/evento1.jpg" alt="" height="300" width="300">
                         <h4 class="mb-3">La Ceremonia</h4>
                         <p class="mb-2">Parroquia de Nuestra Señora de los Dolores (Cerro del Águila). Sevilla</p>
                         <p class="mb-0">12:00AM - 13:00PM</p>
@@ -420,7 +354,7 @@
                 <div class="col-md-6">
                     <div class="text-center text-md-left ml-md-3">
                         <!--img class="img-fluid mb-4" src="img/event-2.jpg" alt=""-->
-                        <img src="img/evento2.gif" alt="" height="300" width="300">
+                        <img src="img/evento/evento2.gif" alt="" height="300" width="300">
                         <h4 class="mb-3">La Fiesta</h4>
                         <p class="mb-2">Hacienda Al-Yamanah. Carretera Benacazón-Sanlúcar la Mayor.</p>
                         <p class="mb-0">14:00PM - 23:00PM</p>
