--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
                 <a href="#novios" class="nav-item nav-link">Sobre Nosotros</a>
                 <a href="#historia" class="nav-item nav-link">Nuestra historia</a>
             </div>
+            <a class="navbar-brand mx-5 d-none d-lg-block">
+                <h1 class="font-secondary text-white mb-n2">Manu <span class="text-primary">&</span> Mayka</h1>
+            </a>
+            <!--
             <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
                 <h1 class="font-secondary text-white mb-n2">Manu <span class="text-primary">&</span> Mayka</h1>
             </a>
+            -->
             <div class="navbar-nav mr-auto py-0">
                 <a href="#galeria" class="nav-item nav-link">Galería</a>
                 <a href="#evento" class="nav-item nav-link">Nuestro día</a>
